<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@color/black" >

    <RelativeLayout
        android:id="@+id/rl_heading"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:background="@color/black" >

        <Button
            android:id="@+id/stopbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/startbutton"
            android:layout_alignBottom="@+id/startbutton"
            android:layout_marginLeft="14dp"
            android:layout_toRightOf="@+id/startbutton"
            android:background="#ff444444"
            android:onClick="onClickStop"
            android:text="@string/stop"
            android:textColor="@color/rgreen"
            android:textStyle="italic" />


        <Button
            android:id="@+id/startbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="18dp"
            android:background="#ff444444"
            android:onClick="onClickStart"
            android:text="@string/start"
            android:textColor="@color/rgreen"
            android:textStyle="italic" />

        <Button
            android:id="@+id/showbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/stopbutton"
            android:layout_alignBottom="@+id/stopbutton"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@+id/stopbutton"
            android:background="#ff444444"
            android:onClick="onClickShow"
            android:text="@string/show"
            android:textColor="@color/rgreen"
            android:textStyle="italic" />

    </RelativeLayout>
	    

    <ScrollView android:id="@+id/ScrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:layout_margin="2dip" 
        android:background="#ff444444">

<!--         <LinearLayout -->
<!--             android:layout_width="fill_parent" -->
<!--             android:layout_height="wrap_content" -->
<!--             android:layout_margin="2dip" > -->

            <TableLayout
                android:id="@+id/battery_table"
                android:layout_width="wrap_content"
                android:layout_height="270dp"
                android:layout_weight="0.95"
                android:stretchColumns="0,1" 
                android:padding="10dp"
                >
            </TableLayout>
<!--         </LinearLayout> -->

    </ScrollView>
</LinearLayout>